--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "css-loader": "^7.1.2",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
+    "next-sitemap": "^4.2.3",
     "postcss-custom-properties": "^14.0.6",
     "postcss-import": "^16.1.0",
     "postcss-loader": "^8.1.1",
